removes scrollbar styling, fixes navbrand position

--- a/main.css
+++ b/main.css
@@ -23,10 +23,6 @@
 
 /* General styles */
 
-* {
-  scrollbar-color: #E7759B var(--bg-color);
-}
-
 html, body {
   width: 100%;
   height: 100%;
@@ -233,7 +229,7 @@ p.holder {
   position: fixed;
   left: 0;
   z-index: 600;
-  padding: 0.625rem;
+  padding: 0.3rem 0.625rem 0.625rem 0.625rem;
 }
 
 .nav-brand img {
@@ -410,7 +406,7 @@ input:checked + .slider:before {
 /* Position toggle in header */
 .nav-lightmode {
   position: absolute;
-  top: 1.125rem;
+  top: 0.79rem;
   left: 11.25rem;
   transform: translateX(-50%);
   z-index: 5000;
@@ -460,11 +456,6 @@ html.light-mode {
   position: relative;
   top: 6.25rem;
   left: 0rem;
-}
-
-a.resume {
-  display: inline-block; 
-  position: relative;    
 }
 
 /* Main header section */
@@ -821,6 +812,7 @@ color: var(--text-color);
 a.resume {
   color: var(--nav-text);
   position: relative;
+  display: inline-block;
   bottom: 1.25rem;
   left: 0.625rem
 }
@@ -983,10 +975,6 @@ a.resume {
 
   .skip-link:focus {
     top: 0.625rem;
-  }
-
-  * {
-    scrollbar-width: none;
   }
 
   body {
